--- a/src/styles/includes/layout.sass
+++ b/src/styles/includes/layout.sass
@@ -3,7 +3,7 @@
   flex-direction: column
   justify-content: stretch
   align-items: stretch
-  height: 100vh
+  height: 100%
 
 .content
   flex: 1
